# docpat

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  .env.production.example  Cargo.toml  TESTING.md  build.rs  clippy.toml  run-integration-tests.sh  rustfmt.toml  seed_comprehensive_test_data.sql  seed_document_templates.sql  seed_test_data.sql
backend/.sqlx/: query-00ccdbe7562ea6f226e271df972f82837bff49883069413b1823ff116ad54e2a.json  query-02239381630694818481bd5ccdea2bdce46658cbbfc429148810e423ef9986f2.json  query-031c4301182b46d92bd115eb0d502300e8f03bd4a6b1833e6271d2fe42e96bc8.json  query-0527a230205f1af0fa3c8cff25152f49991c721fde62d909d2ecd133609daa8f.json  query-05a6bdfac3432e23255026dca22e3375f719c5cf434a389f45a86f4e928f255d.json  query-0644d8abe47743e67021de3d0b46ee2d13e021cf11ce526719620b2cb9ea11bd.json  query-06b1d2313bbc388e8054f163a815f781e5688abb377b975345e6002fd90395be.json  query-08b673391c8a8e8693f15c8929341544c03e556c570aea0184ce3ba2accc2c20.json  query-102c9d27e7dfc9ca99e984ffdb0de57f75d449793c0714ab8e750d4ef4fbd2b3.json  query-114caffe033da2d27fb63320f632a76c9abe03e15b0891449d62709b25719860.json  query-11bcc898a9d3c57d9fc47c633c70eacaf981f87042c32df3308e8927ec1bd29e.json  query-13842ba8cc5c1f5a125069eba38b5e017885ac857f6c913d25520afbc3142744.json  query-1632dac6f5433f451e2735ec3abc192013f8875969b140a62f799da8705d65ae.json  query-169a696b4822e28cae26bce235560c438b6b5133ad08f390b8adfb4f5328f9a6.json  query-18a536f4d09c6e617992ee5d267826f792f39434d0bc5b5b0cb67626edf75d92.json  query-1be729d9fb31dea48da0a7e094abc4017fe6fb5fc274c98fb19c5bef6a13279c.json  query-1c1c0504b71436ff097951183d0a7b75d1314e76a800f3de1d0d7a85158864fa.json  query-1ec34c04f3c750ad5ae03678e0e37ac2a390a6bbbf17f6e37ec80c5b8e21d0af.json  query-20cb0a688352ffd8025362f551d0d68695a8aaa7d2203d2a496aa40ed1fa284f.json  query-22468fc0dc5e218bcd507b8dce1c94aadf459a3a5aae7aaf96c3b7796ca936bc.json  query-29f04ac27829f884da80859bc311dde3ef67dde369502ad1521a28c54018de78.json  query-2d2bf459b9fe16e61c5a152c2d873062ae1be818dad496f9a4fb2a9d27fa7083.json  query-318a76314051c5048731e74fd35d4ef85cd97efdad5c64eda835375ff82a67ae.json  query-333bb8eab3c6edbb0b8ebae653cb265bcaad7d6e47b1f381d7f7cc9c4c3443ba.json  query-35f04e5507b72e6534ad31ecff0a66d8943c8c036f4be9c94b26f8e48fe42d8e.json  query-3901417f7bfe0722bdb43eceb09684d9fcf1f9c6253acfee256c235b1de28750.json  query-3a81095f0caf1d2fe2edb966ffbec5d2cecd2114df8d97f2f5117fab88e33924.json  query-3b244885051e7305b76ba704ff6c576dd9a96701a2a94c7ea90e5aee5bd52366.json  query-3bfbe7753d8c0617aed67cf03c051f3e90b1086116fa466aa10a7d85b1c1d213.json  query-3f4cec9e5b2ac56b512d6e492edd427c1ce53c435ee0d9a669d344c6c2a4b319.json  query-4107e6aea0bf7386b34ec710f53acca2a58961ffd1044c29a713ac988f98e3c1.json  query-460216a0ca1b078ceb4e920dbae3f2831580c6908fe7836fd7f31283bbf9f1ef.json  query-47a652c23b25348819f06f16b228d2298cd67f2636c973891ab7a8c1211e7210.json  query-47ce4affc0d258b58da30b2259d68ac49d0079b67099d9599d8dc29795f66536.json  query-48dd3a2b7e0f89507edd981d35ab5606f80a80206ac1b81950a442e7338772ea.json  query-50d7a91e440fecde1481aaad2988a0f48f2511ee1f150b2b247c3374ba895040.json  query-5246ff34c15e6cc101bc832fee90e57820f0ce46514d1077de84ba1f8d7b1200.json  query-54997deb6ebfc590a1798df8d455d2c3d95cbd537f3499763568c1b3ac8a54d4.json  query-552b6c512db0be80e027de46ce96e789b46a1e876761922501d0e72686d407e0.json  query-55e6ab22b2c9a85c3ab52c275ac684e55a92b9e66295f0b5d6d734a032e7cc35.json  (+81 more)
backend/casbin/: model.conf  policy.csv
backend/migrations/: 20251014123442_create_users_table.sql  20251014123522_create_audit_logs_table.sql  20251014123526_create_patients_table.sql  20251014123538_create_patient_insurance_table.sql  (+36 more)
backend/src/: lib.rs  main.rs
(+651 files in other folders)
